--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15"
-  }
+  },
+  "scripts": {
+  "build:css": "tailwindcss -i ./src/styles/main.css -o ./dist/output.css --watch"
+}
 }
